<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.StudentProfileFragment">


    <TextView
        android:id="@+id/student_profile_name_tv"
        android:layout_width="74dp"
        android:layout_height="25dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/student_profile_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_name_tv"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/student_register_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_email_tv"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/student_group_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_register_number_tv"
        app:layout_constraintVertical_bias="0.058" />

    <RadioGroup
        android:id="@+id/student_frminv_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@+id/student_group_number_tv">

        <RadioButton
            android:id="@+id/student_budget_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/budget" />

        <RadioButton
            android:id="@+id/student_tax_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/tax" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toEndOf="@+id/student_profile_email_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <Spinner
        android:id="@+id/student_profile_spinner"
        android:layout_width="328dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_frminv_rg"
        app:layout_constraintVertical_bias="0.163"
        android:spinnerMode="dialog"/>

    <Button
        android:id="@+id/student_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_spinner"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/student_delete_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toEndOf="@+id/student_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_spinner"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/student_logout_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_spinner"
        app:layout_constraintVertical_bias="0.566" />

    <Button
        android:id="@+id/student_profile_report_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_grade_sheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_logout_profile" />
</androidx.constraintlayout.widget.ConstraintLayout>