<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfesorSubjectFragment">


    <CalendarView
        android:id="@+id/profesor_subject_date_picker"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profesor_subject_exam_date_tv" />

    <TextView
        android:id="@+id/profesor_subject_exam_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_exam_date_for_subject"
        app:layout_constraintBottom_toTopOf="@+id/profesor_subject_date_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="25sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profesor_subject_recycler"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profesor_subject_date_picker"
        app:layout_constraintVertical_bias="0.294"
        tools:itemCount="5"
        tools:listitem="@layout/subject_item_layout" />

    <Button
        android:id="@+id/chart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/see_chart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/export_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_this_report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toEndOf="@+id/chart_btn"
        app:layout_constraintTop_toBottomOf="@+id/profesor_subject_recycler"
        app:layout_constraintVertical_bias="0.92" />
</androidx.constraintlayout.widget.ConstraintLayout>